# amazon-sales

./: README.md  app.py  pyproject.toml  reference.md  requirements.txt  snippets.md
src/: charts.py  data.py  filters.py  layouts.py
