[project]
name = "amazonsaleproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "pandas (>=2.2,<3.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "plotly (>=6.6.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
